--- a/app/src/main/res/layout/client_item.xml
+++ b/app/src/main/res/layout/client_item.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/img_client_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_gravity="center_vertical"
             android:layout_margin="8dp"
             android:contentDescription="@string/txt_client_icon"
