--- a/app/src/main/res/layout/dialog_add_new_year.xml
+++ b/app/src/main/res/layout/dialog_add_new_year.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/title"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="@color/colorPrimaryDark"
