--- a/app/src/main/res/menu/activity_center_drawer.xml
+++ b/app/src/main/res/menu/activity_center_drawer.xml
@@ -4,32 +4,38 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_branches"
             android:icon="@drawable/ic_call_split_black_24dp"
-            android:title="Branches" />
+            android:title="@string/branches" />
+
+        <item android:id="@+id/nav_services"
+            android:icon="@drawable/ic_services"
+            android:title="@string/services"/>
 
         <item
             android:id="@+id/nav_managers"
             android:icon="@drawable/ic_people_black_24dp"
-            android:title="Managers" />
+            android:title="@string/managers" />
+
     </group>
 
-    <item android:title="Options">
+    <item android:title="@string/options">
         <menu>
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings_black_24dp"
-                android:title="Settings" />
+                android:title="@string/settings" />
             <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_info_outline_black_24dp"
-                android:title="About" />
+                android:title="@string/about" />
 
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_logout_black_24dp"
-                android:title="Logout" />
+                android:title="@string/logout" />
         </menu>
     </item>
 
